Test Org - Speridian/src/objects/BA_Group_Competitor__c.object
<CustomObject>
    <fields>
        <fullName>Notes__c</fullName>
        <label>Notes</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>ba_CompetitorName__c</fullName>
        <label>Competitor Name</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ba_ContractsEnrolled__c</fullName>
        <label>Contracts Enrolled</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ba_Created__c</fullName>
        <label>Created</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ba_Group__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Group</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Group Competitors</relationshipLabel>
        <relationshipName>Group_Competitors</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <label>Group Competitor</label>
    <nameField>
        <displayFormat>GC-{0000}</displayFormat>
        <label>Group Competitor Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Group Competitors</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>